--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,15 @@ black = "^24.10.0"
 mypy = "^1.13.0"
 pre-commit = "^4.0.1"
 commitizen = "^3.30.0"
-flake8 = "^7.1.1"
 isort = "^5.13.2"
+wemake-python-styleguide = "^0.19.2"
+nitpick = "^0.35.0"
+cookiecutter = "^2.6.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.nitpick]
+style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
