--- a/{{cookiecutter.project_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_name}}/.pre-commit-config.yaml
@@ -21,13 +21,12 @@ repos:
     rev: 24.10.0
     hooks:
       - id: black
-        exclude: "{{cookiecutter.project_name}}/"
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
     hooks:
       - id: mypy
-        exclude: ^dependencies/|^\.cache/|{{cookiecutter.project_name}}/
-        additional_dependencies: [pytest-mypy-plugins]
+        exclude: ^dependencies/|^\.cache/
+        # additional_dependencies: []
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
