--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,12 +21,12 @@ repos:
     rev: 24.10.0
     hooks:
       - id: black
-        exclude: "{{cookiecutter.project_name}}/"
+        exclude: "{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/"
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
     hooks:
       - id: mypy
-        exclude: ^dependencies/|^\.cache/|{{cookiecutter.project_name}}/
+        exclude: ^dependencies/|^\.cache/|{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/
         additional_dependencies: [pytest-mypy-plugins]
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
