--- a/{{cookiecutter.project_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_name}}/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
     hooks:
       - id: mypy
         exclude: ^dependencies/|^\.cache/
-        # additional_dependencies: []
+        additional_dependencies: [pytest-mypy-plugins]
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
