--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "{{cookiecutter.project_name}}"
 version = "0.1.0"
-description = "{{cookiecutter.project_description}}"
-authors = ["Skylar DonLevy<skylar.donlevy.dev@gmail.com>"]
+description = "{{cookiecutter.description}}"
+authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
 license = "AGPL-3.0"
 readme = "README.md"
 
