feat(hooks): implement pylint flake8 and bandit
- pre-commit-config.yaml expanded, add tools to visual studio code too

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,9 @@ max-line-length = 80
 max-complexity = 6
 docstring-style = numpy
 ignore = D100,D104,D401,W504,RST303,RST304,DAR103,DAR203
+extend-ignore = E203, W503, Q000
+inline-quotes = double
+multiline-quotes = double
 
 [isort]
 profile = wemake
@@ -16,3 +19,20 @@ warn_unreachable = True
 
 [nitpick]
 verbosity = 0
+
+[MASTER]
+disable=all
+enable=unused-import,import-error,redefined-outer-name
+
+[FORMAT]
+max-line-length=88
+
+[DESIGN]
+max-args=10
+max-locals=15
+max-branches=12
+max-statements=50
+max-parents=7
+max-attributes=7
+min-public-methods=2
+max-public-methods=20
