--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 default_language_version:
-    python: python3.12
+  python: python3.12
 
 repos:
   - repo: https://github.com/commitizen-tools/commitizen
@@ -17,11 +17,13 @@ repos:
       - id: check-case-conflict
       - id: check-json
       - id: check-merge-conflict
+      - id: check-toml
   - repo: https://github.com/psf/black
     rev: 24.10.0
     hooks:
       - id: black
-        exclude: "{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/"
+        args:
+          - --line-length=80
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0
     hooks:
@@ -32,3 +34,27 @@ repos:
     rev: 5.13.2
     hooks:
       - id: isort
+  - repo: https://github.com/PyCQA/flake8
+    rev: 7.1.1
+    hooks:
+      - id: flake8
+        args:
+          - --config=setup.cfg
+          - --max-line-length=88
+  - repo: local
+    hooks:
+      - id: pylint
+        name: pylint
+        entry: poetry run pylint --rcfile=setup.cfg --disable=C0103
+        language: python
+        types: [python]
+        additional_dependencies:
+          - poetry
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.10
+    hooks:
+      - id: bandit
+        args:
+          - --severity-level=medium
+          - -r
+          - .
