--- a/.editorconfig
+++ b/.editorconfig
@@ -5,3 +5,14 @@ indent_style = space
 indent_size = 4
 end_of_line = lf
 charset = utf-8
+insert_final_newline = True
+trim_trailing_whitespace = True
+
+[*.{bat,cmd,ps1}]
+end_of_line = crlf
+
+[*.{js,json,json5,yml,yaml,md,rb}]
+indent_size = 2
+
+[Makefile]
+indent_style = tab
