--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 default_language_version:
-  python: python3.12
+  python: python3.11
 
 repos:
   - repo: https://github.com/commitizen-tools/commitizen
@@ -18,43 +18,122 @@ repos:
       - id: check-json
       - id: check-merge-conflict
       - id: check-toml
-  - repo: https://github.com/psf/black
-    rev: 24.10.0
-    hooks:
-      - id: black
-        args:
-          - --line-length=80
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.13.0
-    hooks:
-      - id: mypy
-        exclude: ^dependencies/|^\.cache/|{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/
-        additional_dependencies: [pytest-mypy-plugins]
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
-  - repo: https://github.com/PyCQA/flake8
-    rev: 7.1.1
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0
     hooks:
-      - id: flake8
-        args:
-          - --config=setup.cfg
-          - --max-line-length=88
+      - id: prettier
+        stages:
+          - commit
+  - repo: https://github.com/asottile/blacken-docs
+    rev: v1.12.1
+    hooks:
+      - id: blacken-docs
+        additional_dependencies:
+          - black==23.7.0
+  - repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.10.0
+    hooks:
+      - id: python-check-mock-methods
+      - id: rst-backticks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: debug-statements
   - repo: local
     hooks:
       - id: pylint
         name: pylint
         entry: poetry run pylint --rcfile=setup.cfg --disable=C0103
-        language: python
-        types: [python]
+        language: system
+        exclude: tests/
+        types:
+          - python
+  - repo: https://github.com/openstack/bashate
+    rev: 2.0.0
+    hooks:
+      - id: bashate
+        args:
+          - -i
+          - E006
+  - repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.9.0.2
+    hooks:
+      - id: shellcheck
+  - repo: https://github.com/myint/autoflake
+    rev: v2.0.0
+    hooks:
+      - id: autoflake
+        args:
+          - --in-place
+          - --remove-all-unused-imports
+          - --remove-unused-variables
+          - --remove-duplicate-keys
+          - --ignore-init-module-imports
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.5
+    hooks:
+      - id: bandit
+        args:
+          - --ini
+          - setup.cfg
+        exclude: tests/
+  - repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
+    hooks:
+      - id: flake8
         additional_dependencies:
-          - poetry
+          - flake8-blind-except
+          - flake8-bugbear
+          - flake8-comprehensions
+          - flake8-debugger
+          - flake8-docstrings
+          - flake8-isort
+          - flake8-polyfill
+          - flake8-pytest
+          - flake8-quotes
+          - flake8-typing-imports
+          - yesqa
+        args:
+          - --show-source
+  - repo: https://github.com/psf/black-pre-commit-mirror
+    rev: 24.10.0
+    hooks:
+      - id: black
+        args:
+          - --safe
+          - --quiet
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.13.0
+    hooks:
+      - id: mypy
+        args:
+          - --show-error-codes
+        exclude: ^dependencies/|^\.cache/|{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/
+        additional_dependencies: [pytest-mypy-plugins]
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.10
     hooks:
       - id: bandit
         args:
-          - --severity-level=medium
-          - -r
-          - .
+          - --ini
+          - setup.cfg
+        exclude: tests/
+
+  # - repo: https://github.com/psf/black-pre-commit-mirror
+  #   hooks:
+  #     - id: black
+  #       args:
+  #         - --safe
+  #         - --quiet
+  # - repo: local
+  #   hooks:
+  #     - id: pylint
+  #       name: pylint
+  #       language: system
+  #       exclude: tests/
+  #       types:
+  #         - python
