--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,34 @@
 [flake8]
 strictness = long
-format = wemake
+# format = wemake
 show-source = True
-max-line-length = 80
+max-line-length = 120
 max-complexity = 6
+ignore = D100,D104,D401,W504,RST303,RST304,DAR103,DAR203,D107,D202,D203,E203,E402,E501,W503
 docstring-style = numpy
-ignore = D100,D104,D401,W504,RST303,RST304,DAR103,DAR203
-extend-ignore = E203, W503, Q000
 inline-quotes = double
 multiline-quotes = double
+exclude = .tox,build
 
 [isort]
-profile = wemake
+# profile = wemake
+line_length = 120
+skip = .tox,build
+known_first_party = tests
+multi_line_output = 3
+include_trailing_comma = True
+force_grid_wrap = 0
+combine_as_imports = True
 
 [mypy]
 strict = True
 warn_unreachable = True
+ignore_missing_imports = True
+follow_imports = normal
+strict_optional = True
+warn_no_return = True
+warn_redundant_casts = True
+warn_unused_ignores = False
 
 [nitpick]
 verbosity = 0
@@ -36,3 +49,6 @@ max-parents=7
 max-attributes=7
 min-public-methods=2
 max-public-methods=20
+
+[bandit]
+severity = Medium
