feat(integration): integrate prettier and nitpick
- also integrate all flake8 plugins in setup.cfg
- this helps when running flake8 manually or as plugin

--- a/.nitpick.yaml
+++ b/.nitpick.yaml
@@ -1,3 +1,5 @@
+# This file overrides the built-in prettier style from nitpick so that
+# pre-commit will not thow a deprecation warning.
 style:
   files:
     .pre-commit-config.yaml:
