--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ docstring-style = numpy
 inline-quotes = double
 multiline-quotes = double
 exclude = .tox,build
+plugins = flake8-blind-except, flake8-bugbear, flake8-comprehensions, flake8-debugger, flake8-docstrings, flake8-isort, flake8-polyfill, flake8-pytest, flake8-quotes, flake8-typing-imports
 
 [isort]
 # profile = wemake
