--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
     hooks:
       - id: prettier
         stages:
-          - commit
+          - pre-commit
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.12.1
     hooks:
