--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,2 @@
 [pytest]
-addopts = --ignore={{cookiecutter.project_name}}
-plugins = pytest-cov
+addopts = --ignore={{cookiecutter.project_name}} --cov=.
