test: structure cookiecutter tests
- test first time setup of cookiecut repo

--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -6,6 +6,10 @@ authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
 license = "AGPL-3.0"
 readme = "README.md"
 
+[virtualenvs]
+in-project = true
+path = ".venv"
+
 [tool.poetry.dependencies]
 python = "^3.12"
 
