--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ path = ".venv"
 [tool.poetry.dependencies]
 python = "^3.12"
 pytest-cov = "^6.0.0"
+pytest-dependency = "^0.6.0"
 
 [tool.poetry.extras]
 lint = [ "pylint",]
