--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -97,6 +97,7 @@ repos:
           - flake8-quotes
           - flake8-typing-imports
           - yesqa
+          - nitpick
         args:
           - --show-source
   - repo: https://github.com/psf/black-pre-commit-mirror
