--- a/.coveragerc
+++ b/.coveragerc
@@ -2,3 +2,7 @@
 source = .
 omit =
     */strangebasis_derivative/*
+    {{cookiecutter.project_name}}/.editorconfig
+    {{cookiecutter.project_name}}/.gitignore
+    {{cookiecutter.project_name}}/.pylintrc
+    {{cookiecutter.project_name}}/LICENSE
