--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,14 @@ lint = [ "pylint",]
 version = "*"
 optional = true
 
+[tool.commitizen]
+name = "cz_conventional_commits"
+version = "0.1.3"
+tag_format = "v$version"
+changelog_file = "CHANGELOG.md"
+changelog_incremental = true
+update_changelog_on_bump = false
+
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.1"
 black = "^24.10.0"
