--- a/{{cookiecutter.project_name}}/.github/workflows/python.yaml
+++ b/{{cookiecutter.project_name}}/.github/workflows/python.yaml
@@ -13,10 +13,6 @@ jobs:
           - macos-latest
         python-version:
           - "3.12"
-          - "3.11"
-          - "3.10"
-          - "3.9"
-          - "3.8"
     name: ${{ '{{' }} matrix.python-version {{ '}}' }} ${{ '{{' }} matrix.os {{ '}}' }}
     runs-on: ${{ '{{' }} matrix.os {{ '}}' }}
     env:
@@ -28,5 +24,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ '{{' }} matrix.python-version {{ '}}' }}
-      - name: Install tox
-        run: python -m pip install tox
+      - name: Install poetry
+        run: python -m pip install poetry
+      - name: Install dependencies
+        run: poetry install
+      - name: Run tests
+        run: poetry run pytest
