ci(github_actions): fine tune gh action activation

--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -1,7 +1,11 @@
 name: Python
 on:
-  - push
-  - pull_request
+  pull_request:
+    branches:
+      - "*"
+  push:
+    branches:
+      - main
 jobs:
   build:
     strategy:
