--- a/{{cookiecutter.project_name}}/.github/workflows/ci.yaml
+++ b/{{cookiecutter.project_name}}/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: Python
+name: Python CI
 on:
   pull_request:
     branches:
@@ -17,17 +17,17 @@ jobs:
           - macos-latest
         python-version:
           - "3.12"
-    name: ${{ matrix.python-version }} ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+    name: ${{ '{{' }} matrix.python-version {{ '}}' }} ${{ '{{' }} matrix.os {{ '}}' }}
+    runs-on: ${{ '{{' }} matrix.os {{ '}}' }}
     env:
       PYTHONUNBUFFERED: 1
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ '{{' }} matrix.python-version {{ '}}' }}
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ '{{' }} matrix.python-version {{ '}}' }}
       - name: Install poetry
         run: python -m pip install poetry
       - name: Install dependencies
@@ -44,7 +44,7 @@ jobs:
       - name: Report coverage to CodeClimate
         if: matrix.os == 'ubuntu-latest'
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          CC_TEST_REPORTER_ID: ${{ '{{' }} secrets.CC_TEST_REPORTER_ID {{ '}}' }}
         run: |
           ./cc-test-reporter before-build
           ./cc-test-reporter format-coverage coverage.xml --input-type coverage.py
