--- a/{{cookiecutter.project_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_name}}/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ default_language_version:
 
 repos:
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v3.30.0
+    rev: v3.30.1
     hooks:
       - id: commitizen
         stages: [commit-msg]
@@ -18,18 +18,19 @@ repos:
       - id: check-json
       - id: check-merge-conflict
       - id: check-toml
+      - id: debug-statements
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0
+    rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
         stages:
           - pre-commit
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.1
+    rev: 1.19.1
     hooks:
       - id: blacken-docs
         additional_dependencies:
@@ -39,10 +40,6 @@ repos:
     hooks:
       - id: python-check-mock-methods
       - id: rst-backticks
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
-    hooks:
-      - id: debug-statements
   - repo: local
     hooks:
       - id: pylint
@@ -53,18 +50,18 @@ repos:
         types:
           - python
   - repo: https://github.com/openstack/bashate
-    rev: 2.0.0
+    rev: 2.1.1
     hooks:
       - id: bashate
         args:
           - -i
           - E006
   - repo: https://github.com/shellcheck-py/shellcheck-py
-    rev: v0.9.0.2
+    rev: v0.10.0.1
     hooks:
       - id: shellcheck
   - repo: https://github.com/myint/autoflake
-    rev: v2.0.0
+    rev: v2.3.1
     hooks:
       - id: autoflake
         args:
@@ -74,7 +71,7 @@ repos:
           - --remove-duplicate-keys
           - --ignore-init-module-imports
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.5
+    rev: 1.7.10
     hooks:
       - id: bandit
         args:
@@ -82,7 +79,7 @@ repos:
           - setup.cfg
         exclude: tests/
   - repo: https://github.com/PyCQA/flake8
-    rev: 6.0.0
+    rev: 7.1.1
     hooks:
       - id: flake8
         additional_dependencies:
