--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Fetch all history for all branches and tags
+          tags: true # Fetch all tags
 
       - name: Set up Python
         uses: actions/setup-python@v4
