fix(release.yaml): add debug output [skip_ci]

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,7 +16,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Fetch all history for all branches and tags
-          tags: true # Fetch all tags
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -34,9 +33,20 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
+      - name: List Git Tags Before Bump
+        run: git tag
+
       - name: Bump version and generate changelog
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           poetry run cz bump --yes --changelog
+
+      - name: List Git Tags After Bump
+        run: git tag
+
+      - name: Push Changes and Tags
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
           git push origin main --follow-tags
