--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,4 +49,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git push origin main --follow-tags
+          git push origin main
+          git push origin --tags
