--- a/.editorconfig
+++ b/.editorconfig
@@ -16,3 +16,9 @@ indent_size = 2
 
 [Makefile]
 indent_style = tab
+
+[*.md]
+indent_style = space
+indent_size = 1
+insert_final_newline = True
+trim_trailing_whitespace = True
