--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,7 +44,7 @@ repos:
     hooks:
       - id: pylint
         name: pylint
-        entry: poetry run pylint --rcfile=setup.cfg --disable=C0103
+        entry: poetry run pylint --disable=C0103
         language: system
         exclude: tests/
         types:
