--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ style = [
     "./nitpick/strangebasis-pre-commit.toml",
     "./nitpick/strangebasis-readthedocs.toml",
     "./nitpick/core.toml",
+    "./nitpick/style.toml",
     # TODO: add pylint, isort, mypy and maybe pytest options
     # TODO: consider making one nitpick file for strangebasis repo config management at large
 ]
