feat(nitpick/style.toml): enforce pyproject isort settings with nitpick

--- a/nitpick/style/isort.toml
+++ b/nitpick/style/isort.toml
@@ -8,3 +8,15 @@ repo = "https://github.com/pycqa/isort"
 
 [[".pre-commit-config.yaml".repos.hooks]]
 id = "isort"
+
+
+["pyproject.toml".tool.isort]
+profile = "black"
+line_length = 120
+indent = "    "
+skip = [".tox", "build"]
+known_first_party = ["tests"]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+combine_as_imports = true
