feat(nitpick/core.toml): add shellcheck to the core config management

--- a/nitpick/core.toml
+++ b/nitpick/core.toml
@@ -10,5 +10,6 @@ include = [
     "core/editorconfig.toml",
     "core/gitlegal.toml",
     "core/precommit.toml",
-    "core/pygrep.toml"
+    "core/pygrep.toml",
+    "py://nitpick/resources/shell/shellcheck",
 ]
