refactor(nitpick/style.toml): modularize autflake config management
- autoflake is only in the pre-commit-config.yaml

--- a/nitpick/style.toml
+++ b/nitpick/style.toml
@@ -7,5 +7,6 @@ include = [
     "style/isort.toml",
     "style/prettier.toml",
     "style/pylint.toml",
+    "py://nitpick/resources/python/autoflake",
     "py://nitpick/resources/python/black",
 ]
