--- a/{{cookiecutter.project_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.project_name}}/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ default_language_version:
 
 repos:
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v3.30.1
+    rev: v4.1.0
     hooks:
       - id: commitizen
         stages: [commit-msg]
@@ -44,7 +44,7 @@ repos:
     hooks:
       - id: pylint
         name: pylint
-        entry: poetry run pylint --rcfile=setup.cfg --disable=C0103
+        entry: poetry run pylint --disable=C0103
         language: system
         exclude: tests/
         types:
@@ -71,7 +71,7 @@ repos:
           - --remove-duplicate-keys
           - --ignore-init-module-imports
   - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.10
+    rev: 1.8.2
     hooks:
       - id: bandit
         args:
@@ -105,18 +105,14 @@ repos:
           - --safe
           - --quiet
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.13.0
+    rev: v1.14.1
     hooks:
       - id: mypy
         args:
           - --show-error-codes
         exclude: ^dependencies/|^\.cache/|{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/
         additional_dependencies: [pytest-mypy-plugins]
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.10
+  - repo: https://github.com/editorconfig-checker/editorconfig-checker.python
+    rev: 3.0.3
     hooks:
-      - id: bandit
-        args:
-          - --ini
-          - setup.cfg
-        exclude: tests/
+      - id: editorconfig-checker
