--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -22,7 +22,7 @@ optional = true
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.0.1"
+version = "0.2.7"
 tag_format = "v$version"
 changelog_file = "CHANGELOG.md"
 changelog_incremental = true
@@ -45,6 +45,7 @@ flake8-black = "^0.2.0"
 flake8-quotes = "^3.4.0"
 pytest-cov = "^6.0.0"
 pytest-dependency = "^0.6.0"
+jinja2 = "^3.1.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.8"]
@@ -52,46 +53,49 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.isort]
 profile = "black"
-line_length = 88
+line_length = 120
 indent = "    "
-
-[tool.pylint]
-max-line-length = 88
-indent-string = "    "
-
-[tool.flake8]
-max-line-length = 88
+skip = [".tox", "build"]
+known_first_party = ["tests"]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+combine_as_imports = true
 
 [tool.black]
 line-length = 120
 
 [tool.nitpick]
 style = [
-    "py://nitpick/resources/any/codeclimate",
-    "py://nitpick/resources/any/commitizen",
-    "py://nitpick/resources/any/editorconfig",
-    "py://nitpick/resources/any/git-legal",
-    "py://nitpick/resources/any/pre-commit-hooks",
     "py://nitpick/resources/javascript/package-json",
     "py://nitpick/resources/markdown/markdownlint",
     "py://nitpick/resources/python/absent",
-    "py://nitpick/resources/python/autoflake",
     "py://nitpick/resources/python/bandit",
-    "py://nitpick/resources/python/black",
-    "py://nitpick/resources/python/flake8",
-    "py://nitpick/resources/python/isort",
-    "py://nitpick/resources/python/mypy",
     "py://nitpick/resources/python/poetry",
     "py://nitpick/resources/python/pre-commit-hooks",
-    "py://nitpick/resources/python/pylint",
     "py://nitpick/resources/python/radon",
     "py://nitpick/resources/python/sonar-python",
     "py://nitpick/resources/python/312",
-    "py://nitpick/resources/shell/bashate",
-    "py://nitpick/resources/shell/shellcheck",
-    "https://raw.githubusercontent.com/strangebasisdevs/strangebasis/refs/tags/v0.2.4/nitpick/strangebasis-prettier.toml",
-    "https://raw.githubusercontent.com/strangebasisdevs/strangebasis/refs/tags/v0.2.4/nitpick/strangebasis-pre-commit.toml",
-    "https://raw.githubusercontent.com/strangebasisdevs/strangebasis/refs/tags/v0.2.4/nitpick/strangebasis-readthedocs.toml",
-    "https://raw.githubusercontent.com/strangebasisdevs/strangebasis/refs/tags/v0.2.4/nitpick/strangebasis-prettier.toml",
-    "https://raw.githubusercontent.com/strangebasisdevs/strangebasis/refs/tags/v0.2.4/nitpick/strangebasis-github-workflow.toml",
+    "./nitpick/core.toml",
+    "./nitpick/style.toml"
 ]
+
+[tool.pytest.ini_options]
+addopts = "--ignore={{cookiecutter.project_name}} --cov=."
+pythonpath = ["."]
+
+[tool.coverage.run]
+source = ["."]
+
+[tool.mypy]
+strict = true
+warn_unreachable = true
+ignore_missing_imports = true
+follow_imports = "normal"
+strict_optional = true
+warn_no_return = true
+warn_redundant_casts = true
+warn_unused_ignores = false
+
+[tool.bandit]
+severity = "Medium"
