--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -86,6 +86,11 @@ pythonpath = ["."]
 
 [tool.coverage.run]
 source = ["."]
+omit = [
+    "*.toml",
+    "*.json",
+    "tests/*.py",
+]
 
 [tool.mypy]
 strict = true
